# mtrx1705_assignment_3_patterning_code

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  pattern.txt
